# exchange-lab

./: .gitignore  Cargo.toml  README.md  run-demo.bat  run-demo.ps1  run-live.bat
.github/workflows/: ci.yml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: exchange_lab.proto
crates/api/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/journal/: Cargo.toml
crates/journal/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
data/: sample_events.csv
src/: lib.rs
tests/: system_flow.rs
