[package]
name = "exchange-lab-workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[workspace]
members = [
    "crates/core",
    "crates/ingest",
    "crates/engine",
    "crates/journal",
    "crates/replay",
    "crates/api",
    "crates/cli",
    "crates/metrics",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
axum = "0.7"
bincode = "1.3"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
csv = "1.3"
futures = "0.3"
once_cell = "1.19"
prometheus = "0.13"
proptest = "1.5"
prost = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
exchange-lab-core = { path = "crates/core" }
exchange-lab-engine = { path = "crates/engine" }
exchange-lab-ingest = { path = "crates/ingest" }
exchange-lab-journal = { path = "crates/journal" }
exchange-lab-replay = { path = "crates/replay" }
tempfile.workspace = true
