[package]
name = "exchange-lab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
exchange-lab-api = { path = "../api" }
exchange-lab-core = { path = "../core" }
exchange-lab-engine = { path = "../engine" }
exchange-lab-ingest = { path = "../ingest" }
exchange-lab-journal = { path = "../journal" }
exchange-lab-metrics = { path = "../metrics" }
exchange-lab-replay = { path = "../replay" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "exchange-lab"
path = "src/main.rs"
