[package]
name = "exchange-lab-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
csv.workspace = true
exchange-lab-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
