[package]
name = "exchange-lab-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exchange-lab-core = { path = "../core" }
exchange-lab-engine = { path = "../engine" }
exchange-lab-journal = { path = "../journal" }
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
